[workspace]
resolver = "3"
exclude = ["cpp", "fuzz", "crates/sonora-sys", "crates/sonora-bench"]
members = [
    "crates/sonora",
    "crates/sonora-ffi",
    "crates/sonora-common-audio",
    "crates/sonora-aec3",
    "crates/sonora-agc2",
    "crates/sonora-ns",
    "crates/sonora-simd",
    "crates/sonora-fft",
]

[workspace.package]
edition = "2024"
rust-version = "1.91"
license = "BSD-3-Clause"
repository = "https://github.com/dignifiedquire/sonora"

[workspace.dependencies]
# Internal crates
sonora = { version = "0.1.0", path = "crates/sonora" }
sonora-ffi = { version = "0.1.0", path = "crates/sonora-ffi" }
sonora-common-audio = { version = "0.1.0", path = "crates/sonora-common-audio" }
sonora-aec3 = { version = "0.1.0", path = "crates/sonora-aec3" }
sonora-agc2 = { version = "0.1.0", path = "crates/sonora-agc2" }
sonora-ns = { version = "0.1.0", path = "crates/sonora-ns" }
sonora-simd = { version = "0.1.0", path = "crates/sonora-simd" }
sonora-fft = { version = "0.1.0", path = "crates/sonora-fft" }

# External dependencies
cpufeatures = "0.3"
derive_more = { version = "2", features = ["debug"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytemuck = { version = "1", features = ["derive"] }
proptest = "1.11"
test-strategy = "0.4"
criterion = { version = "0.8", features = ["html_reports"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cpal = "0.17"
ctrlc = { version = "3", features = ["termination"] }
hound = "3"
ringbuf = "0.4"

[workspace.lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ["cfg(docsrs)"] }
elided_lifetimes_in_paths = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
or_fun_call = "warn"
use_self = "warn"
unused_async = "warn"
absolute_paths = "warn"
manual_let_else = "warn"
allow_attributes_without_reason = "warn"
mod_module_files = "deny"
# DSP: exact C++ float constants for bit-exact output
excessive_precision = "allow"
# DSP: exact C++ table values near known constants (e.g. PI)
approx_constant = "allow"

# Match C++ optimization level: -O3, LTO, single codegen unit
[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
lto = "thin"
codegen-units = 1
debug = true
